--- a/project.ipynb
+++ b/project.ipynb
@@ -6,6 +6,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%pip install numpy\n",
+    "%pip install pandas\n",
+    "%pip install matplotlib.pyplot\n",
+    "%pip install seaborn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -14,10 +26,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([7777777])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([7777777])"
+   ]
   }
  ],
  "metadata": {
