--- a/project.ipynb
+++ b/project.ipynb
@@ -32,10 +32,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ВОТ ТУТ ОПИСАНИЕ ДАТАСЕТА"
+    "~~AAAAA~~"
    ]
   },
   {
