--- a/project.ipynb
+++ b/project.ipynb
@@ -35,7 +35,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ВОТ ТУТ ОПИСАНИЕ ДАТАСЕТА"
+    "Описание:\n",
+    "\n",
+    "В данном проекте представлен обзор двух датасетов содержащих информацию об учениках португальских образовательных учреждений, включая общую информацию об учениках, информацию о их успеваемости в образовательном учреждении и информацию об объемах потребляемого алкоголя. Примечательно, что в данных датасетах представленаа информация об учниках получающих среднее образование (возраст респондентов 15-22). При этом возраст легализации алкоголя в Португалии (данные представлены именно по этой стране) - 18 лет.\n",
+    "\n",
+    "\n",
+    "Описание переменных представленных в датасете:\n",
+    "\n",
+    "School - категориальная переменная, наименование учебного заведения, в котором учится респондент: 'GP' - Gabriel Pereira, 'MS' - Mousinho da Silveira\n",
+    "\n",
+    "Sex\t- категориальная переменная, пол респондента: 'F' - девушка, 'M' - парень.\n",
+    "\n",
+    "Age -  количетсвенная  переменная, возраст респондента: от 15 до 22\n",
+    "\n",
+    "Adress - категориальная переменная, тип местности, в которой проживает респондент:  'U' - город, 'R' - сельская местность\n",
+    "\n",
+    "Famsize - категориальная переменная, показавыет размер семьи респондента: 'LE3' - 3 человека или меньше, 'GT3' - больше 3 человек\n",
+    "\n",
+    "Pstatus - категориальная переменная, семейный статус родителей: 'T' - родители живут вместе, 'A' - родители живут отдельно\n",
+    "\n",
+    "Medu - количественная переменная, оразование матери респондента: 0 - нет, 1 - начальное (4 класса), 2 - с 5-го по 9-й класс, 3 - среднее образование, 4 - высшее образование.\n",
+    "\n",
+    "Fedu - количественная переменная, образование отца: 0 - нет, 1 - начальное (4 класса), 2 - с 5-го по 9-й класс, 3 - среднее образование, 4 - высшее образование.\n",
+    "\n",
+    "Mjob - категориальная переменная, профессия матери: 'teacher' - учитель, 'health' - медицинский работник, 'services' - государственная служба (например, полиция или адмистративная работа), 'at_home' - домохозяйка, 'other' - другое.\n",
+    "\n",
+    "Fjob - категориальная переменная, профессия отца: 'teacher' - учитель, 'health' - медицинский работник, 'services' - государственная служба (например, полиция или адмистративная работа), 'at_home' - домохозяин, 'other' - другое.\n",
+    "\n",
+    "Reason - категориальная переменная, причина выбора данной школы: 'home' - близость к дому, 'reputation' - репутация школы, 'course' - предпочтение по курсу, 'other' - другое.\n",
+    "\n",
+    "Guardian - категориальная переменная, опекун респондента: 'mother' - мать, 'father' - отец, 'other' - другой.\n",
+    "\n",
+    "Traveltime - количественная переменная, время в пути от дома до школы: 1 - менее 15 минут, 2 - от 15 до 30 минут, 3 - от 30 минут до 1 часа, 4 - более 1 часа.\n",
+    "\n",
+    "Studytime - количественная переменная, время, затрачиваемое на учебу в неделю: 1 - менее 2 часов, 2 - от 2 до 5 часов, 3 - от 5 до 10 часов, 4 - более 10 часов.\n",
+    "\n",
+    "Failures - количественная переменная, количество прошлых неудач в учебе (я так понимаю, что не перевли в следующий класс или типа того): n, если 1 <= n < 3, иначе 0.\n",
+    "\n",
+    "Schoolsup - категориальная переменная, наличие дополнительных курсов: 'yes' - есть, 'no' - нет.\n",
+    "\n",
+    "Famsup - категориальная переменная, наличие образовательной поддержки от семьи: 'yes' - есть, 'no' - нет.\n",
+    "\n",
+    "Paid - категориальная переменная, наличие платных дополнительных занятий по предметам: 'yes' - есть, 'no' - нет.\n",
+    "\n",
+    "Activities - категориальная переменная, наличие внеклассной деятельности: 'yes' - есть, 'no' - нет.\n",
+    "\n",
+    "Nursery - категориальная переменная, посещение детского сада: 'yes' - было, 'no' - нет.\n",
+    "\n",
+    "Higher - категориальная переменная, желание получить высшее образование: 'yes' - есть, 'no' - нет.\n",
+    "\n",
+    "Internet - категориальная переменная, наличие доступа в интернет дома: 'yes' - есть, 'no' - нет.\n",
+    "\n",
+    "Romantic - категориальная переменная, наличие романтических отношений: 'yes' - есть, 'no' - нет.\n",
+    "\n",
+    "Famrel - количественная переменная, качество семейных отношений: от 1 до 5, где 1 - очень плохо, до 5 - отлично.\n",
+    "\n",
+    "Freetime - количественная переменная, свободное время после школы: от 1 до 5, где 1 - очень мало, до 5 - очень много.\n",
+    "\n",
+    "Goout - количественная переменная, времяпрепровождение с друзьями: от 1 до 5, где 1 - очень редко, до 5 - очень часто.\n",
+    "\n",
+    "Dalc - количественная переменная, потребление алкоголя в будни: от 1 до 5, где 1 - очень мало, до 5 - очень много.\n",
+    "\n",
+    "Walc - количественная переменная, потребление алкоголя в выходные: от 1 до 5, где 1 - очень мало, до 5 - очень много.\n",
+    "\n",
+    "Health - количественная переменная, текущее состояние здоровья: от 1 до 5, где 1 - очень плохо, до 5 - очень хорошо.\n",
+    "\n",
+    "Absences - количественная переменная, количество пропусков занятий: от 0 до 93.\n",
+    "\n",
+    "\n",
+    "За рассматриваемые предметы ученики получают оцеки (удивительно).\n",
+    "\n",
+    "G1 - количественная переменная, оценка за первый период: от 0 до 20\n",
+    "\n",
+    "G2 - количественная переменная, оценка за второй период: от 0 до 20\n",
+    "\n",
+    "G3 - количественная переменная, итоговая оценка за учебный год, которая выставляется в третьем периоде (триместре), имеет сильную корреляцию с G2 и G1: от 0 до 20\n",
+    "\n"
    ]
   },
   {
