--- a/project.ipynb
+++ b/project.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "(395, 33)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
        "max     75.000000   19.000000   19.000000   20.000000  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1053,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1309,7 @@
        "[5 rows x 54 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 276,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
@@ -1426,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -1454,28 +1454,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 279,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sklearn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[34], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodel_selection\u001b[39;00m \u001b[39mimport\u001b[39;00m train_test_split\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1491,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1500,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1511,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1521,15 +1509,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13.72087816263212\n",
-      "22.995268863038575\n"
+      "14.966874284794978\n",
+      "18.51106392996495\n"
      ]
     }
    ],
@@ -1547,60 +1535,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "age\t\t-0.26\n",
-      "Medu\t\t0.47\n",
-      "Fedu\t\t0.35\n",
-      "traveltime\t\t0.15\n",
-      "studytime\t\t0.10\n",
-      "failures\t\t-1.61\n",
-      "famrel\t\t0.11\n",
-      "freetime\t\t0.08\n",
-      "goout\t\t-0.52\n",
-      "health\t\t-0.35\n",
-      "absences\t\t0.41\n",
-      "Alc\t\t0.15\n",
-      "sex_F\t\t67063220694616.11\n",
-      "sex_M\t\t67063220694616.84\n",
-      "address_R\t\t-99588088552018.72\n",
-      "address_U\t\t-99588088552018.53\n",
-      "famsize_GT3\t\t53055546846502.59\n",
-      "famsize_LE3\t\t53055546846502.97\n",
-      "Mjob_at_home\t\t14047144499111.79\n",
-      "Mjob_health\t\t11537690073978.84\n",
-      "Mjob_other\t\t18619371430737.89\n",
-      "Mjob_services\t\t17420942183969.28\n",
-      "Mjob_teacher\t\t14458809011588.47\n",
-      "Fjob_at_home\t\t41602525479215.94\n",
-      "Fjob_health\t\t35679010894561.45\n",
-      "Fjob_other\t\t105862926571487.06\n",
-      "Fjob_services\t\t97856724117133.77\n",
-      "Fjob_teacher\t\t57600813153799.35\n",
-      "reason_course\t\t-63979111327995.52\n",
-      "reason_home\t\t-58997378003065.01\n",
-      "reason_other\t\t-37065230167844.70\n",
-      "reason_reputation\t\t-56960071816961.17\n",
-      "guardian_father\t\t-2909821450161.28\n",
-      "guardian_mother\t\t-3161739786061.97\n",
-      "guardian_other\t\t-1745628346830.07\n",
-      "famsup_no\t\t-11225674915461.30\n",
-      "famsup_yes\t\t-11225674915461.55\n",
-      "paid_no\t\t12439643763542.94\n",
-      "paid_yes\t\t12439643763543.18\n",
-      "activities_no\t\t-78820238861523.58\n",
-      "activities_yes\t\t-78820238861523.84\n",
-      "nursery_no\t\t65392913155667.49\n",
-      "nursery_yes\t\t65392913155667.42\n",
-      "internet_no\t\t19572480810055.83\n",
-      "internet_yes\t\t19572480810055.86\n",
-      "romantic_no\t\t25062008724345.68\n",
-      "romantic_yes\t\t25062008724345.05\n"
+      "age\t\t-0.47\n",
+      "Medu\t\t0.15\n",
+      "Fedu\t\t0.25\n",
+      "traveltime\t\t0.06\n",
+      "studytime\t\t0.28\n",
+      "failures\t\t-1.18\n",
+      "famrel\t\t0.16\n",
+      "freetime\t\t0.05\n",
+      "goout\t\t-0.66\n",
+      "health\t\t-0.44\n",
+      "absences\t\t0.30\n",
+      "Alc\t\t0.13\n",
+      "school_GP\t\t-77647704607614.11\n",
+      "school_MS\t\t-77647704607614.08\n",
+      "sex_F\t\t-86363098378204.16\n",
+      "sex_M\t\t-86363098378203.44\n",
+      "address_R\t\t171163413321704.72\n",
+      "address_U\t\t171163413321705.19\n",
+      "famsize_GT3\t\t217010108721480.06\n",
+      "famsize_LE3\t\t217010108721480.41\n",
+      "Pstatus_A\t\t53204803490464.62\n",
+      "Pstatus_T\t\t53204803490464.42\n",
+      "Mjob_at_home\t\t-178347889735070.41\n",
+      "Mjob_health\t\t-127440695089589.34\n",
+      "Mjob_other\t\t-222987004576794.44\n",
+      "Mjob_services\t\t-206614722715122.84\n",
+      "Mjob_teacher\t\t-165640270082975.78\n",
+      "Fjob_at_home\t\t609133517511.87\n",
+      "Fjob_health\t\t629308672600.14\n",
+      "Fjob_other\t\t1384311020065.48\n",
+      "Fjob_services\t\t1249907085910.28\n",
+      "Fjob_teacher\t\t735999588047.93\n",
+      "reason_course\t\t60412237068378.62\n",
+      "reason_home\t\t55645920366653.88\n",
+      "reason_other\t\t36714277745875.78\n",
+      "reason_reputation\t\t51577010362699.19\n",
+      "guardian_father\t\t56278647822832.05\n",
+      "guardian_mother\t\t61150982276720.09\n",
+      "guardian_other\t\t33762072568187.11\n",
+      "schoolsup_no\t\t-171201469676144.94\n",
+      "schoolsup_yes\t\t-171201469676145.31\n",
+      "famsup_no\t\t-50339741936592.78\n",
+      "famsup_yes\t\t-50339741936593.23\n",
+      "paid_no\t\t-22759029996457.41\n",
+      "paid_yes\t\t-22759029996457.00\n",
+      "activities_no\t\t168003964287640.41\n",
+      "activities_yes\t\t168003964287640.62\n",
+      "nursery_no\t\t10250045402738.04\n",
+      "nursery_yes\t\t10250045402737.98\n",
+      "internet_no\t\t1181223739083.19\n",
+      "internet_yes\t\t1181223739083.52\n",
+      "romantic_no\t\t26013614345942.31\n",
+      "romantic_yes\t\t26013614345941.59\n"
      ]
     }
    ],
@@ -1619,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
@@ -1628,7 +1622,7 @@
        "(649, 33)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 286,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1640,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -1704,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
@@ -1935,7 +1929,7 @@
        "max     32.000000   19.000000   19.000000   19.000000  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 288,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1946,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -2001,7 +1995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2010,7 +2004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
@@ -2037,7 +2031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
@@ -2051,7 +2045,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 292,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2062,7 +2056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -2110,7 +2104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
@@ -2301,7 +2295,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 294,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2324,7 +2318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2333,7 +2327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2343,7 +2337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [
     {
@@ -2541,7 +2535,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 297,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2552,7 +2546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [
     {
@@ -2593,7 +2587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
@@ -2791,7 +2785,7 @@
        "[5 rows x 54 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 299,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2799,43 +2793,6 @@
    "source": [
     "df_port = pd.get_dummies(df_port)\n",
     "df_port.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Объединение"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.merge(df_math,df_port, how='inner',on=[\"school\",\"sex\",\"age\",\"address\",\"famsize\",\"Pstatus\",\"Medu\",\"Fedu\",\"Mjob\",\"Fjob\",\"reason\",\"nursery\",\"internet\"])\n",
-    "\n",
-    "df.shape\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(df.isnull().any().any())"
    ]
   }
  ],
