--- a/project.ipynb
+++ b/project.ipynb
@@ -1102,7 +1102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Попробуем использовать Lasso"
+    "Попробуем использовать Lasso регрессию, чтобы избежать переобучения."
    ]
   },
   {
